Bug 246062. No accessible name for trees and listboxes. r=neil, sr=jst